--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,15 +1,24 @@
 .Header {
     display: flex;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
     background-color: #175864;
     width: 100%;
-    min-height: 30vh;
-    border: 10px solid #fff;
-}
-
-.Header h1,
-h2{
+    min-height: 10vh;
+  }
+  
+  .header-content {
+    display: flex;
+    align-items: center;
+  }
+  
+  .header-text {
     color: goldenrod;
-}
+    margin-left: 20px; 
+  }
+  
+  .Header img {
+    max-width: 35%;
+    max-height: 250px;
+  }
+  
