--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,25 +1,27 @@
 nav {
     width: 100%;
     background-color: #0f3a41;
-    min-height: 10vh;
-    display: flex; 
-    align-items: center; 
+    height: 50px;
+    display: flex;
+    align-items: center;
 }
 
 ul {
     display: flex;
-    list-style-type: none;
-    margin: 0; 
-    padding: 0; 
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    padding: 20; 
 }
 
-li {
-    color: goldenrod;
+.li {
+    text-decoration: none;
+    color: #FFFFFF;
     font-size: 18px;
-    margin-right: 30px; 
-    padding-left: 70px;
+    list-style-type: none;
+    transition: color 0.3s; 
 }
 
 .li:hover {
-    color: rgb(181, 181, 221); 
+    color: #C79215; 
 }
