--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,17 @@
   margin: 0;
   padding: 0;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-decoration: none;
 }
-
-img{
-  width: 20%;
-}
-
 
 .App {
   text-align: center;
+}
+
+.btn-section {
+  display: flex;
+  width: 200%;
+  justify-content: space-around;
 }
 
 .UserSection {
@@ -31,8 +33,3 @@ img{
   background-color: rgb(239, 246, 208);
 }
 
-.btn-section {
-  display: flex;
-  width: 200%;
-  justify-content: space-around;
-}
