--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,11 +1,21 @@
 h1{
   color: #C79215;
-  /* padding-right: 100px; */
+  padding-right: 100px;
+  display: flex;
+  font-size: 60px;
 }
+
+h2{
+  font-size: 40px;
+  color: #dd9b00;
+  padding-left: 50px;
+  padding: 10px;
+}
+
 
 h3{
   color: #E6C984;
-  /* padding-right: 50px; */
+  padding-left: 50px;
 }
 
 .Header{
@@ -14,3 +24,19 @@ h3{
   align-items: center;
   background-color: #175864;
 }
+
+/* img{
+  width: 10%;
+
+  h4{
+                font-size: 20px;
+                margin-bottom: 25px;
+                display: inline-block;
+                border-bottom: 2px solid black;
+
+            }
+
+
+
+
+} */
